# so101_infer

./: CMakeLists.txt  readme.md
include/: model_runner.h  preprocess.h  tensor_io.h
models/: policy.pt
src/: main.cpp  model_runner.cpp  preprocess.cpp  tensor_io.cpp
tests/: parity_test.cpp
